update readme, change shell detection, force compilation into 32bit mode

--- a/mk.config
+++ b/mk.config
@@ -5,7 +5,11 @@
 # compatibility with traditional tools, the Heirloom Bourne shell is
 # recommended. It then must obviously be compiled and installed first.
 #
-SHELL = /sbin/sh
+ifneq ("$(wildcard /usr/5bin/sh)","")
+SHELL = /usr/5bin/sh
+else
+SHELL = /bin/sh
+endif
 
 #
 # Specify the path name for a POSIX-conforming shell here. For example,
@@ -57,8 +61,8 @@ CXX = c++
 #
 # Compiler flags.
 #
-CFLAGS=-O
-CXXFLAGS=-O
+CFLAGS=-m32 -O
+CXXFLAGS=-m32 -O
 
 #
 # C preprocessor flags.
@@ -76,7 +80,7 @@ CPPFLAGS=-D_GNU_SOURCE
 #
 # Linker flags.
 #
-LDFLAGS=
+LDFLAGS=-m32
 
 #
 # Additional libraries to link with.
