hardcode a stropts.h file location, detect a install executable

--- a/mk.config
+++ b/mk.config
@@ -21,7 +21,12 @@ POSIX_SHELL = /bin/sh
 #
 # A BSD-compatible install command.
 #
+ifneq ("$(wildcard /usr/ucb/install)","")
 INSTALL=/usr/ucb/install
+else
+INSTALL=/usr/bin/install
+endif
+
 
 #
 # Prefix.
